Update transaction_detail.xml by Zefa (22 Desember 2023, 20:38)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="welcome_message">Selamat datang, %1$s</string>
     <string name="logout">Logout</string>
     <string name="akhiri_shift">akhiri shift</string>
+    <string name="back_button">Kembali</string>
 </resources>
